--- a/src/assets/less/weed/popup.less
+++ b/src/assets/less/weed/popup.less
@@ -41,7 +41,7 @@
 @popup-max-width:                                           700px;
 @popup-title-height:                                        57px;
 @popup-vertical-spacing:                                    25px;
-@popup-z-index:                                             @z-maximum;
+@popup-z-index:                                             1000;
 @popup-zoom-initial:                                        0.9;
 @popup-zoom-bg-opacity:                                     0.8;
 @popup-dual-titled-title-height:                            110px;
